# open-impact-v2

./: .gitignore  AGENTS.md  Justfile  README.md  pyproject.toml
.agent/rules/: python-guide.md
.github/workflows/: python-tests.yml
data/output/: final_monthly.csv  final_yearly.csv
data_science/: README.md
data_science/data_processing/: build_weather_datasets.py
docs/: accessibility.md  python_guidelines.md  web_guidelines.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.d.ts  vitest.setup.ts  vitest.shims.d.ts
frontend/.storybook/: vitest.setup.ts
frontend/src/: App.tsx  index.css  main.tsx  vitest-env.d.ts
frontend/src/components/: RealTimeList.test.tsx  RealTimeList.test.tsx.backup2  RealTimeList.test.tsx.bak  RealTimeList.test.tsx.final  RealTimeList.tsx
frontend/src/components/charts/: MetricBandChart.tsx  MonthlySeriesChart.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  MetricCard.module.css  MetricCard.tsx  Sidebar.tsx
frontend/src/features/climate/: ClimateDashboard.tsx  MetricCard.tsx
frontend/src/features/items/: types.ts
frontend/src/features/items/components/: RealTimeList.test.tsx  RealTimeList.tsx
frontend/src/lib/: apiClient.ts
frontend/src/stories/: RealTimeList.stories.tsx
src/app/: __init__.py  main.py  models.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: annual_data.py  chat.py  items.py  monthly_data.py
src/app/core/: config.py  logging.py
src/app/db/: session.py
src/app/services/: annual_data.py  monthly_data.py  websocket.py
src/pipelines/: config.yaml
src/pipelines/cli/: main.py
tests/: conftest.py  test_main.py  test_websocket.py
