[project]
name = "app"
version = "0.1.0"
description = "Backend for Python and React Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "websockets>=13.0",
    "structlog>=24.0.0",
    "websockets>=13.0",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "httpx>=0.27.0",
    "ty>=0.0.1a0", 
]
data-science = [
    "click>=8.3.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "FBT", # flake8-boolean-trap
    "TID", # flake8-tidy-imports
    "A",   # flake8-builtins
    "ANN", # flake8-annotations
]
ignore = ["FBT001", "FBT002"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ty.rules]
possibly-unresolved-reference = "error"
division-by-zero = "error"
unused-ignore-comment = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--disable-socket --allow-unix-socket"
timeout = 3
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
meteo = "data_science.cli.main:main"
